--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ body, html{
     top : 70px;
     left: 450px;
     display: block;
+    z-index: 100;
 }
 .hover-red:hover{
     color: rgb(253, 123, 123);
@@ -487,17 +488,223 @@ button.prev{
 #poster-movie-7:hover #movie-7{
     display: flex !important;
 }
-#prev-movie{
+.prev{
     background: url(assets/arow-movie-selection.png) 34px 0;
     width: 33px;
     height: 64px;
-    top : 141px;
-    left: -34px;
+    display: none;
 }
-#next-movie{
+.next{
     background: url(assets/arow-movie-selection.png) 0px 0px;
     width: 33px;
     height: 64px;
+}
+#next-movie{
     top : 141px;
     right: -33px;
+}
+#prev-movie{
+    display: none;
+    top : 141px;
+    left: -34px;
+}
+
+
+.quang-cao{
+    margin: 40px 0 80px 0;
+    display: flex;
+    justify-content: center;
+}
+.content-quang-cao{
+    overflow: hidden;
+}
+.toggel-tabs{
+    list-style: none outside none;
+    display: block;
+
+}
+#ribon-left{
+    background: url(assets/ribon_left_menu.gif) no-repeat scroll left 0 #e71a0f;
+    padding-left: 19px;
+    line-height: 39px;
+    color: white;
+    font-weight: bold;
+}
+#ribon-right{
+    background: url(assets/ribon_right.gif) no-repeat scroll right 0 #e71a0f;
+    padding-right: 19px;
+    line-height: 39px;
+    color: white;
+    font-weight: bold;
+}
+.abv-content{
+    display: flex;
+    height: 201px;
+    width: var(--width);
+}
+.abv-content li{
+    display: inline;
+    margin-right: 7px;
+}
+.abv-content img{
+    display: flex;
+    height: 201px;
+    width: 240px;
+}
+#next-adv{
+    top : 75px;
+    right : -33px;
+}
+#prev-adv{
+    top: 75px;
+    left: -33px;
+}
+
+.ticket-couples{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content-ticket{
+    border-bottom: 4px solid black;
+    border-top: 4px solid black;
+}
+.content-ticket a{
+    display: inline-block;
+    border: 4px solid black;
+    padding: 4px;
+    transform: scale(0.8);
+}
+.content-ticket img{
+    display: inline;
+}
+
+.footer-content{
+    margin-top: 40px;
+}
+.footer-brand-slide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 2px solid black;
+    border-top: 2px solid black;
+    margin-bottom: 20px;
+}
+.list-brand-film{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    width: var(--width);
+}
+.list-brand-film li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.list-brand-film a{
+    display: inline-block;
+}
+#brand-1{
+    background: url(assets/brand-type-film-footer.png) -18px -6px;
+    width: 65px;
+    height: 32px;
+}
+#brand-2{
+    background: url(assets/brand-type-film-footer.png) -708px -13px; 
+    width: 85px;
+    height: 20px;
+}
+#brand-3{
+    background: url(assets/brand-type-film-footer.png) -981px -9px; 
+    width: 76px;
+    height: 29px;
+}
+#brand-4{
+    background: url(assets/brand-type-film-footer.png) -567px -10px; 
+    width: 98px;
+    height: 28px;
+}
+#brand-5{
+    background: url(assets/brand-type-film-footer.png) -1111px -10px; 
+    width: 112px;
+    height: 27px;
+}
+#brand-6{
+    background: url(assets/brand-type-film-footer.png) -133px -6px;
+    width: 101px;
+    height: 29px;
+}
+#brand-7{
+    background: url(assets/brand-type-film-footer.png) -1275px -11px; 
+    width: 57px;
+    height: 26px;
+}
+#brand-8{
+    background: url(assets/brand-type-film-footer.png) -1362px -4px; 
+    width: 115px;
+    height: 43px;
+}
+.footer-main{
+    display: flex;
+    justify-content: center;
+}
+.footer-main-content{
+    display: flex;
+    justify-content: space-between;
+    width: var(--width);
+    font-size: 90%;
+    color: rgb(90, 90, 90);
+}
+.footer-main-content h3{
+    margin-bottom: 7px;
+}
+.footer-main-content ul{
+    list-style: none;
+}
+.footer-main-content a{
+    text-decoration: none;
+    color: rgb(90, 90, 90);    
+    font-size: 110%;
+    word-spacing: 1px;
+}
+
+.icon-follow ul li{
+    display: inline;
+}
+#fb{
+    display: inline-block;
+    background: url(assets/bg-social-footer-40.png) -6px 0px; 
+    width: 43px;
+    height: 43px;
+}
+#youtube{
+    display: inline-block;
+    background: url(assets/bg-social-footer-40.png) -52px 0px; 
+    width: 43px;
+    height: 43px;
+}
+#insta{
+    display: inline-block;
+    background: url(assets/bg-social-footer-40.png) -97px 0px;
+    width: 43px;
+    height: 43px;
+}
+#line{
+    display: inline-block;
+    background: url(assets/bg-social-footer-40.png) -143px 0px; 
+    width: 43px;
+    height: 43px;
+}
+#zalo{
+    display: inline-block;
+    background: url(assets/bg-social-footer-40.png) -190px 0px; 
+    width: 43px;
+    height: 43px;
+}
+.zoom-icon:hover{
+    transition: 0.2s;
+    transform: scale(1.4);
+}
+.customer-cgv{
+    width: 274px;
 }
